tests/run/error_string_mix.em
// error_string_mix.em — no coercion: string + int is rejected.
fn main() -> string {
    return "x" + 1
}
